# ssr_wasmedge

./: Cargo.toml  README.md  start-ssr-wasmedge.sh
percy/app/: Cargo.toml
percy/app/src/views/nav_bar_view/: mod.rs  nav_bar_item_view.rs
percy/client/: Cargo.toml
src/: main.rs
